
Format:
* what about empty binary xml data in the event record? does it only contain a 0x00 byte?

Debug:
* libfwevt: character reference print trailing data
* handle empty XML document:
  libevtx_record_values_read_xml_document: XML document:
  libfwevt_xml_tag_debug_print: invalid XML tag.

Recovery:
* scan for records in chunk free space

20140731
* bug fix in Python-bindings

20140723
* worked on dpkg debug packages support

20140531
* updated msvscpp files

20140530
* updated dependencies
* worked on Python-bindings
* replaced PackageMaker for pkgbuild

20140402
* code clean up

20140323
* worked on Python-bindings

20140317
* updated dependencies
* worked on setup.py
* worked on Python-bindings

20140210
* added evtxexport man page

20140131
* removed examples

20140112
* updated dependencies

20140105
* 2014 update

20132111
* small fix in evtxexport -h output
* updated dependencies
* worked on python bindings

20131013
* updated dependencies

20131009
* improved dpkg files

20130929
* worked on setup.py, largely for MSI builds

20130923
* updated dependencies

20130909
* updated dependencies
* worked on libcthreads build support

20130727
* updated dependencies
* pyevtx
  - changed event identifier to an unsigned long
  - fixes for >2G file objects in BFIO glue code

20130718
* updated dependencies
* removed unnecessary restriction in library include headers

20130713
* worked on tests
* improved reading from dirty files with an incorrect number of chunks

20130712
* fix for encoding special characters in XML output
* code clean up
* pyevtx small changes to docstrings
* worked on tests
* updated dependencies
* added support for parsing ProcessingErrorData

20130609
* updated dependencies

20120521
* worked on improving corruption detection for recovered records

20120421
* worked on tests
* updated dependencies
* bug fixes in binary xml parsing

20120418
* fixed issue for uftf16 base16 string too small

20120417
* comparing the results of various builds
