@@ -25,6 +25,7 @@
 #include <common.h>
 #include <types.h>
 
+#include "evtxtools_libbfio.h"
 #include "evtxtools_libcerror.h"
 #include "evtxtools_libcstring.h"
 #include "evtxtools_libexe.h"
