@@ -106,8 +106,6 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libwrc", "libwrc\libwrc.vcp
 		{9D37639F-1694-47DF-84BF-336D98E0639F} = {9D37639F-1694-47DF-84BF-336D98E0639F}
 	EndProjectSection
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libevtx-20140723", "libevtx-20140723\libevtx-20140723.vcproj", "{6BA4C7DC-06C3-47F7-A3BF-AC14197D89AF}"
-EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "pyevtx", "pyevtx\pyevtx.vcproj", "{E221DB4C-B254-47CB-993D-DC7FED580DA1}"
 	ProjectSection(ProjectDependencies) = postProject
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
@@ -165,6 +163,8 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "evtxexport", "evtxexport\ev
 		{25C60507-39C6-4564-912D-DA2E7482A00F} = {25C60507-39C6-4564-912D-DA2E7482A00F}
 		{3FFB9C05-1145-45A7-9ADE-5C8D70FBD7CA} = {3FFB9C05-1145-45A7-9ADE-5C8D70FBD7CA}
 		{34C4E176-F033-44FA-8B74-E2798F8C0EEA} = {34C4E176-F033-44FA-8B74-E2798F8C0EEA}
+		{41CFAFBF-A1C8-4704-AFEF-31979E6452B9} = {41CFAFBF-A1C8-4704-AFEF-31979E6452B9}
+		{BC27FF34-C859-4A1A-95D6-FC89952E1910} = {BC27FF34-C859-4A1A-95D6-FC89952E1910}
 		{B86FB73A-4ACC-42DE-9545-586D93955B06} = {B86FB73A-4ACC-42DE-9545-586D93955B06}
 		{9DF4AFB0-CED6-4BC5-802D-E8C951C5AED9} = {9DF4AFB0-CED6-4BC5-802D-E8C951C5AED9}
 		{5304AD69-D449-4589-B2C9-E4607E56A51D} = {5304AD69-D449-4589-B2C9-E4607E56A51D}
@@ -318,10 +318,6 @@ Global
 		{EAC7955A-6861-48CF-B6BA-B09C5E8642CA}.Release|Win32.Build.0 = Release|Win32
 		{EAC7955A-6861-48CF-B6BA-B09C5E8642CA}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
 		{EAC7955A-6861-48CF-B6BA-B09C5E8642CA}.VSDebug|Win32.Build.0 = VSDebug|Win32
-		{6BA4C7DC-06C3-47F7-A3BF-AC14197D89AF}.Release|Win32.ActiveCfg = Release|Win32
-		{6BA4C7DC-06C3-47F7-A3BF-AC14197D89AF}.Release|Win32.Build.0 = Release|Win32
-		{6BA4C7DC-06C3-47F7-A3BF-AC14197D89AF}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
-		{6BA4C7DC-06C3-47F7-A3BF-AC14197D89AF}.VSDebug|Win32.Build.0 = VSDebug|Win32
 		{E221DB4C-B254-47CB-993D-DC7FED580DA1}.Release|Win32.ActiveCfg = Release|Win32
 		{E221DB4C-B254-47CB-993D-DC7FED580DA1}.Release|Win32.Build.0 = Release|Win32
 		{E221DB4C-B254-47CB-993D-DC7FED580DA1}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
