@@ -281,6 +281,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libexe\libexe_libfcache.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libexe\libexe_libfdata.h"
 				>
 			</File>
