@@ -76,6 +76,9 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20140901
+* bug fix in Python-bindings
+
 20140731
 * bug fix in Python-bindings
 
